--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             :root {
                 --slide-width: min(85vw, 350px);
             }
+            /* Completely push adjacent cards off-screen so only one shows at a time */
+            .slide[data-next] { --slide-tx: 150vw !important; }
+            .slide[data-previous] { --slide-tx: -150vw !important; }
             /* Hide the adjacent cards on mobile so they don't peek out half-way */
             .slide:not([data-current]) {
                 opacity: 0 !important;
@@ -926,11 +929,12 @@
             function applyResponsiveState() {
                 if (window.innerWidth <= 768) {
                     // Mobile specific positioning for Earth
-                    planet.position.set(0.9, 0, 0); // Shift right
-                    planet.scale.set(0.65, 0.65, 0.65); // Make smaller
-                    orbit.target.set(0.9, 0, 0); // Keep rotation centered on shifted planet
+                    // Move it significantly to the right and scale down (half size) so it doesn't overlap left buttons
+                    planet.position.set(1.2, 0, -1.2); 
+                    planet.scale.set(0.5, 0.5, 0.5); 
+                    orbit.target.set(1.2, 0, -1.2); 
                     
-                    // Enable Slider Auto-play
+                    // Enable Slider Auto-play every 2 seconds automatically for mobile
                     if (!sliderAutoPlayInterval && typeof updateSliderState === 'function') {
                         sliderAutoPlayInterval = setInterval(() => {
                             sliderIndex = (sliderIndex + 1) % sliderData.length;
@@ -938,12 +942,12 @@
                         }, 2000);
                     }
                 } else {
-                    // Laptop/Desktop specific positioning for Earth
-                    planet.position.set(0, 0, 0); // Center
-                    planet.scale.set(1, 1, 1); // Normal scale
-                    orbit.target.set(0, 0, 0); // Center orbit
+                    // Laptop/Desktop specific positioning for Earth (Original)
+                    planet.position.set(0, 0, 0); 
+                    planet.scale.set(1, 1, 1); 
+                    orbit.target.set(0, 0, 0); 
                     
-                    // Disable Slider Auto-play
+                    // Disable Slider Auto-play on desktop
                     if (sliderAutoPlayInterval) {
                         clearInterval(sliderAutoPlayInterval);
                         sliderAutoPlayInterval = null;
