--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <button onclick="toggleMobileMenu()" class="absolute top-6 right-8 text-4xl text-gray-300 hover:text-red-500 transition cursor-pointer pointer-events-auto">
                 <i class="fas fa-times"></i>
             </button>
-            <div class="flex flex-col gap-8 text-2xl font-[Orbitron] font-bold tracking-widest text-center pointer-events-auto">
+            <div class="flex flex-col gap-6 mt-10 text-2xl font-[Orbitron] font-bold tracking-widest text-center pointer-events-auto">
                 <span onclick="navigateToMobile('home')" class="text-white hover:text-purple-400 cursor-pointer transition">HOME</span>
                 <span onclick="navigateToMobile('profile')" class="text-white hover:text-purple-400 cursor-pointer transition">PROFILE</span>
                 <span onclick="navigateToMobile('education')" class="text-white hover:text-purple-400 cursor-pointer transition">EDUCATION</span>
@@ -649,28 +649,12 @@
                                         <div class="thumbnail"><img loading="lazy" src="card1.jpg" alt="Thumbnail 1"></div>
                                         <template class="card-data">
                                             <div class="mobile-card">
-                                                <div class="poster"><img src="card1.jpg" alt="Location Unknown"></div>
+                                                <div class="poster"><img src="card1.jpg" alt="Finalist at IIT Bombay"></div>
                                                 <div class="details">
-                                                    <h1>Location Unknown</h1>
-                                                    <h2>2021 • PG • 1hr 38min</h2>
-                                                    <div class="rating">
-                                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-                                                        <span>4.2/5</span>
-                                                    </div>
-                                                    <div class="tags">
-                                                        <span class="tag">Italian</span><span class="tag">Drama</span><span class="tag">Indie</span>
-                                                    </div>
-                                                    <p class="desc">
-                                                        Marco, a disillusioned backpacker in his late 20s, embarks on a solitary journey in search for meaning.
+                                                    <h1 style="font-size: 1.4em; line-height: 1.3; margin-bottom: 12px;">Finalist at IIT Bombay – National Level Hackathon</h1>
+                                                    <p class="desc" style="font-size: 0.95em;">
+                                                        Selected as a finalist at the hackathon hosted during Asia’s largest science and technology festival at IIT Bombay. A proud moment to represent our college on a national stage and gain valuable exposure in one of the biggest innovation platforms in Asia.
                                                     </p>
-                                                    <div class="cast">
-                                                        <h3>Cast</h3>
-                                                        <ul>
-                                                            <li><img src="https://i.postimg.cc/jqgkqhSb/cast-11.jpg" alt="Marco" title="Marco"></li>
-                                                            <li><img src="https://i.postimg.cc/8P7X7r7r/cast-12.jpg" alt="Rebecca" title="Rebecca"></li>
-                                                            <li><img src="https://i.postimg.cc/2SvHwRFk/cast-13.jpg" alt="Antonio" title="Antonio"></li>
-                                                        </ul>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </template>
@@ -681,27 +665,12 @@
                                         <div class="thumbnail"><img loading="lazy" src="card2.jpg" alt="Thumbnail 2"></div>
                                         <template class="card-data">
                                             <div class="mobile-card">
-                                                <div class="poster"><img src="card2.jpg" alt="Air"></div>
+                                                <div class="poster"><img src="card2.jpg" alt="Team Ghost Protocol"></div>
                                                 <div class="details">
-                                                    <h1>Air</h1>
-                                                    <h2>2020 • PG • 24min</h2>
-                                                    <div class="rating">
-                                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
-                                                        <span>4/5</span>
-                                                    </div>
-                                                    <div class="tags">
-                                                        <span class="tag">Romance</span><span class="tag">Comedy</span><span class="tag">Short</span>
-                                                    </div>
-                                                    <p class="desc">
-                                                        Two strangers meet together on a plane flying to the alps.
+                                                    <h1 style="font-size: 1.5em; line-height: 1.3; margin-bottom: 12px;">Team Ghost Protocol</h1>
+                                                    <p class="desc" style="font-size: 0.95em;">
+                                                        Ghost Protocol is a competitive hackathon team that has represented our institution at multiple events and is further aiming to participate in major competitions like Smart India Hackathon and other national-level hackathons.
                                                     </p>
-                                                    <div class="cast">
-                                                        <h3>Cast</h3>
-                                                        <ul>
-                                                            <li><img src="https://i.postimg.cc/yY2QcYRp/cast-21.jpg" alt="Angelina" title="Angelina"></li>
-                                                            <li><img src="https://i.postimg.cc/R0BgpsXc/cast-22.jpg" alt="Ivan" title="Ivan"></li>
-                                                        </ul>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </template>
@@ -712,27 +681,12 @@
                                         <div class="thumbnail"><img loading="lazy" src="card4.jpg" alt="Thumbnail 3"></div>
                                         <template class="card-data">
                                             <div class="mobile-card">
-                                                <div class="poster"><img src="card4.jpg" alt="End Credits"></div>
+                                                <div class="poster"><img src="card4.jpg" alt="Top 8 Innovation Finalists"></div>
                                                 <div class="details">
-                                                    <h1>End Credits</h1>
-                                                    <h2>2021 • R • 1hr 41min</h2>
-                                                    <div class="rating">
-                                                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
-                                                        <span>4.7/5</span>
-                                                    </div>
-                                                    <div class="tags">
-                                                        <span class="tag yellow">Teen</span><span class="tag">Comedy</span><span class="tag blue">Drama</span>
-                                                    </div>
-                                                    <p class="desc">
-                                                        Alex, together with his best friends, goes on a road trip whilst experiencing friendship, self-discovery, and the bittersweet transition to adulthood.
+                                                    <h1 style="font-size: 1.5em; line-height: 1.3; margin-bottom: 12px;">Top 8 Innovation Finalists</h1>
+                                                    <p class="desc" style="font-size: 0.95em;">
+                                                        Secured a Top 8 position among numerous competing teams in a highly competitive hackathon. Demonstrated innovation, problem-solving skills, and teamwork while competing against talented participants at a national level.
                                                     </p>
-                                                    <div class="cast">
-                                                        <h3>Cast</h3>
-                                                        <ul>
-                                                            <li><img src="https://i.postimg.cc/xd3twv4B/cast-31.jpg" alt="Jessica" title="Jessica"></li>
-                                                            <li><img src="https://i.postimg.cc/C1MmSZy5/cast-32.jpg" alt="Charles" title="Charles"></li>
-                                                        </ul>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </template>
